@@ -1,3 +1,6 @@
+2005-05-18 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * [gpasm] Check for divide by zero on modulo operator.
+
 2005-05-11 Craig Franklin <craigfranklin@users.sourceforge.net>
   * [gpstrip] Allow multiple input files.
 
